@@ -1,3 +1,12 @@
+2008-01-08  Anders Carlsson  <andersca@apple.com>
+
+        Reviewed by Mitz.
+
+        Don't add the applet widget to the view, that's done later by RenderApplet.
+            
+        * loader/FrameLoader.cpp:
+        (WebCore::FrameLoader::createJavaAppletWidget):
+
 2008-01-08  Antti Koivisto  <antti@apple.com>
 
         Reviewed by Weinig.
